--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/three": "^0.182.0",
+    "@vercel/analytics": "^1.6.1",
     "gsap": "^3.14.2",
     "next": "16.1.6",
     "react": "19.2.3",
